# kiosk-browser

./: .gitignore  README.linux.md  README.md  README.windows.md  TODO.md  package.json
.cursor/rules/: dev.mdc
.cursor/skills/kiosk-browser-architecture/: SKILL.md
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/keyboard/: keys.rs  linux_evdev.rs  linux_x11.rs  mod.rs  windows.rs
